Bug 328447 - ktp-log-viewer does not show contacts
Summary: ktp-log-viewer does not show contacts
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: log-viewer (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-05 12:08 UTC by Eugene Shalygin
Modified: 2013-12-06 12:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene Shalygin 2013-12-05 12:08:51 UTC
Contacts list is empty in log viewer on my setup. I'm using all ktp packages from Git master.

Reproducible: Always




If I replace in LogViewer::LogViewer() m_filterModel in the call ui->entityList->setModel(m_filterModel);
with m_contactsModel, the contacts are shown.

In PersonEntityMergeModel::sourceModelInitialized() initializeMode() is never called,  m_initializedSources == 0 at the entering. PersonEntityMergeModel::sourceModelInitialized() is not called second time. If I move initializeModel() call out of if statement, contacts list
shows my contacts (well, their IDs), the same if condition is changed to "== 1" instead of "== 2" and I can browse my logs
Comment 1 Daniel Vrátil 2013-12-06 12:43:22 UTC
Git commit f870f907011f6da712853b17c012e670d29a74cb by Dan Vrátil.
Committed on 06/12/2013 at 12:39.
Pushed by dvratil into branch 'master'.

Delay initial call to PersonsModel::onContactsFetched

onContactsFetched() emits the modelInitialized() signal, so when it's
called directly from constructor, the signal's emitted before anyone
can connect to it.

M  +2    -1    src/personsmodel.cpp

http://commits.kde.org/libkpeople/f870f907011f6da712853b17c012e670d29a74cb