Delay initial call to PersonsModel::onContactsFetched

onContactsFetched() emits the modelInitialized() signal, so when it's
called directly from constructor, the signal's emitted before anyone
can connect to it.

BUG: 328447